# tagiato

./: .gitignore  CLAUDE.md  Makefile  README.md  install.sh  pyproject.toml
src/tagiato/: __init__.py  __main__.py
src/tagiato/cli/: __init__.py  main.py
src/tagiato/cli/commands/: __init__.py  apply.py  enrich.py  export.py  reset.py  serve.py  status.py
src/tagiato/core/: __init__.py  config.py  exceptions.py  logger.py  pipeline.py
src/tagiato/models/: __init__.py  location.py  photo.py  timeline.py
src/tagiato/services/: __init__.py  ai_provider.py  describer.py  exif_writer.py  geocoder.py  location_matcher.py  md_parser.py  photo_scanner.py  thumbnail.py  timeline_loader.py  xmp_writer.py
src/tagiato/state/: __init__.py  manager.py
src/tagiato/web/: __init__.py  app.py  routes.py  state.py
src/tagiato/web/static/css/: app.css
src/tagiato/web/static/i18n/: cs.json  en.json
src/tagiato/web/static/js/: tagiato.batch.js  tagiato.init.js  tagiato.log.js  tagiato.map.js  tagiato.photo-events.js  tagiato.photo-update.js  tagiato.photos.js  tagiato.prompt-preview.js  tagiato.prompts.js  tagiato.selection.js  tagiato.settings.js  tagiato.state.js  tagiato.tasks.js
src/tagiato/web/templates/: base.html  index.html
src/tagiato/web/templates/partials/: _header.html  _log_panel.html  _modal_map.html  _modal_prompt_preview.html  _modal_prompts.html  _modal_save_preset.html  _modal_settings.html  _photo_gallery.html  _toast_container.html
tests/: __init__.py  test_models.py
